# Native-Seal

./: CMakeLists.txt  README.md  main.cpp  test.cpp  test1.cpp  test3.cpp  testmulti.cpp
src/convolution/: convolution.cpp  convolution.h
src/flatten/: flatten.cpp  flatten.h
src/functions/: square.cpp  square.h
src/he/: he.cpp  he.h
src/linear/: linear.cpp  linear.h
src/pooling/: adaptiveAvgPooling.cpp  adaptiveAvgPooling.h  avgPooling.cpp  avgPooling.h
src/sequential/: sequential.cpp  sequential.h
